--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "nuxt": "^3.16.0",
+    "sass": "^1.85.1",
+    "sass-loader": "^10.5.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.18.1",
     "sass-embedded": "^1.85.1",
     "vite-plugin-vuetify": "^2.1.0",
-    "vuetify": "^3.7.15"
+    "vuetify": "^3.7.0-beta.1"
   }
 }
