--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nuxt/image": "^1.9.0",
     "nuxt": "^3.16.0",
     "sass": "^1.85.1",
     "sass-loader": "^10.5.2",
