--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@nuxt/image": "^1.9.0",
+    "@pinia/nuxt": "^0.10.1",
+    "axios": "^1.8.2",
     "nuxt": "^3.16.0",
     "sass": "^1.85.1",
     "sass-loader": "^10.5.2",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
+    "@types/axios": "^0.14.4",
     "sass-embedded": "^1.85.1",
     "vite-plugin-vuetify": "^2.1.0",
     "vuetify": "^3.7.0-beta.1"
