--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "@nuxt/image": "^1.9.0",
     "@pinia/nuxt": "^0.10.1",
     "axios": "^1.8.2",
@@ -25,6 +26,6 @@
     "@types/axios": "^0.14.4",
     "sass-embedded": "^1.85.1",
     "vite-plugin-vuetify": "^2.1.0",
-    "vuetify": "^3.7.0-beta.1"
+    "vuetify": "^3.7.15"
   }
 }
