--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "nuxt start",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -18,6 +19,7 @@
     "nuxt": "^3.16.0",
     "sass": "^1.85.1",
     "sass-loader": "^10.5.2",
+    "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -25,7 +27,6 @@
     "@nuxt/types": "^2.18.1",
     "@types/axios": "^0.14.4",
     "sass-embedded": "^1.85.1",
-    "vite-plugin-vuetify": "^2.1.0",
     "vuetify": "^3.7.15"
   }
 }
